k8s-setup/bookinfo/NetworkPolicy/services/reviews/egress.yaml
# Allow reviews v2/v3 to access ratings service
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-reviews-to-ratings
  namespace: dev1
spec:
  tier: default
  order: 400
  selector: app == "reviews" && version in {"v2", "v3"}
  egress:
  - action: Allow
    protocol: TCP
    destination:
      services:
        name: ratings
        namespace: dev1
      ports: [9080]
